# vigilant-api

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: deploy.yml
api/v1/: events.py  incidents.py  monitoring.py  reporter.py  telemetry.py
config/: reporter.json  seed.json
core/: db_manager.py  logger.py  procedures.yaml
core/database/: __init__.py  schema.sql  seed_data.sql
core/database/clickhouse/: schema.sql
core/database/clickhouse/migrations/: v004_model_identity_ch.sql  v005_rag_traces_ch.sql
core/database/migrations/: v004_model_identity.py
core/database/postgres/: schema.sql
core/database/postgres/migrations/: v002_consolidate_models.sql  v003_reports_content_jsonb.sql  v004_model_identity_pg.sql
core/ml_engine/: __init__.py  engine.py  schema.yaml
notebooks/: example1.json  example2.json  example3.json
repositories/: __init__.py  alerts.py  drift_results.py  feature_stats.py  incidents.py  models.py  production_log.py  rag_traces.py  reports.py
scripts/: db_snapshot.sh  init_baseline.py  seed.py
services/: alerting_engine.py  data_loader.py  dispatcher_service.py  drift_detector.py  notification_service.py  performance_service.py  reporter.py
tests/: conftest.py  fake_database.py  test_alerting.py  test_e2e_flow.py  test_endpoints.py  test_infra.py  test_performance.py  test_reporter_logic.py
