[project]
name = "vigilant-mlops-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "~=3.12.0"
dependencies = [
    "polars (==1.40.1)",
    "fastapi>=0.115.0",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0.0",
    "psycopg2-binary>=2.9.0",
    "clickhouse-connect>=0.8.0",
    "pytz>=2024.1",
    "loguru>=0.7.0",
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --durations=5"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
